--- a/darkerr.css
+++ b/darkerr.css
@@ -409,21 +409,21 @@ legend {
     background-color: var(--color-White);
 }
 
-.modal-footer > button:not([class*="btn-primary"]):not([class*="btn-danger"]) {
+.modal-footer > button:not([class*="btn-primary"]):not([class*="btn-danger"]):not([class*="btn-success"]) {
     color: var(--color-White);
     background-color: var(--color-DarkBG);
     border-color: var(--color-White);
     outline-style: none;
 }
 
-.modal-footer > button:hover:not([class*="btn-primary"]):not([class*="btn-danger"]) {
+.modal-footer > button:hover:not([class*="btn-primary"]):not([class*="btn-danger"]):not([class*="btn-success"]) {
     color: var(--color-White);
     background-color: var(--color-Grey);
     border-color: var(--color-White);
     outline-style: none;
 }
 
-.modal-footer > button:active:not([class*="btn-primary"]):not([class*="btn-danger"]) {
+.modal-footer > button:active:not([class*="btn-primary"]):not([class*="btn-danger"]):not([class*="btn-success"]) {
     color: var(--color-DarkBG);
     background-color: var(--color-White);
     border-color: var(--color-White);
@@ -589,6 +589,47 @@ ul.qualities li.selected:hover .select-handle {
 #add-series-screen .search-item a,
 #add-movies-screen .search-item a {
     color: var(--color-White);
+}
+
+/* titles */
+
+a,
+.episode-title-cell {
+    color: var(--color-White);
+    text-decoration: none;
+}
+
+a:focus,
+a:hover,
+.episode-title-cell:focus,
+.episode-title-cell:hover {
+    color: var(--color-White);
+    text-decoration: underline;
+}
+
+/*-------------------------------------------*/
+
+@media (max-width: 991px) {
+    .toolbar .page-toolbar .x-toolbar-left-1 {
+        display: block;
+    }
+    .toolbar .page-toolbar .btn-group {
+        display: block;
+    }
+    .btn-group.btn-group-collapse > .btn {
+        margin: 2px;
+        display: block;
+        float: none;
+        border-radius: 4px!important;
+        word-wrap: normal;
+        white-space: normal;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .table-responsive {
+        border: none;
+    }
 }
 
 /*-------------------------------------------*/
