--- a/darkerr.css
+++ b/darkerr.css
@@ -1,4 +1,5 @@
 /*  Darkerr 2.0 by Felix
+        2.6 () -
         2.5 (30/03/2018) - Color adjustment, improvements with Radarr, various fixes 
         2.3 (07/06/2017) - Fix
         2.2 (24/05/2017) - Fix buttons in search view
@@ -443,6 +444,20 @@ legend {
     background-color: var(--color-White);
 }
 
+.btn.x-search-back {
+    color: var(--color-White);
+    background-color: var(--color-DarkBG);
+    border-color: var(--color-White);
+    outline-style: none;
+}
+
+.btn.x-search-back:hover {
+    color: var(--color-White);
+    background-color: var(--color-Grey);
+    border-color: var(--color-White);
+    outline-style: none;
+}
+
 /* outline */
 
 .btn {
@@ -597,6 +612,22 @@ ul.qualities li.selected:hover .select-handle {
 .nav.nav-pills.nav-stacked > li:not([class*="active"]) > a:hover {
     color: var(--color-DarkBG);
     background-color: var(--color-White);
+}
+
+pre {
+    color: #20C20E;
+    background-color: black;
+    border: 1px solid black;
+}
+
+pre::selection {
+    color: black;
+    background: #20C20E;
+}
+
+pre::-moz-selection {
+    color: black;
+    background: #20C20E;
 }
 
 /* titles */
