--- a/sass/partials/_login.scss
+++ b/sass/partials/_login.scss
@@ -10,12 +10,12 @@ body {
 
     //header
     .panel-header {
-        background-color: $GreyBG !important;
+        background-color: $DarkBG !important;
     }
 
     //body
     .panel-body {
-        background-color: $GreyBG !important;
+        background-color: $DarkBG !important;
 
         //form input
         .form-input {
