--- a/sass/partials/_modals.scss
+++ b/sass/partials/_modals.scss
@@ -37,6 +37,24 @@
         }
     }
 
+    //group
+    .QualityProfileItem-qualityProfileItem-2Xr42 {
+        background-color: $GreyBG !important;
+        border-color: $White !important;
+    }
+
+    .QualityProfileItemGroup-qualityProfileItemGroup-3SvgI {
+        background-color: $GreyBG !important;
+        border-color: $White !important;
+
+        //quality profile labels
+        .Label-default-2zdw6 {
+            background-color: $Grey !important;
+            border-color: $Grey !important;
+            font-weight: normal !important;
+        }
+    }
+
     //tag
     .TagInputInput-inputContainer-1SHrF {
         .TagInput-input-2UK6_ {
