--- a/sass/darkerr.scss
+++ b/sass/darkerr.scss
@@ -1,4 +1,4 @@
-/*  Darkerr 3.0.0-beta2 by Felix
+/*  Darkerr 3.0.0-beta3 by Felix
 
         A darker theme for Sonarr, Radarr & Lidarr
 
@@ -33,3 +33,4 @@
 @import "partials/_system.scss";
 @import "partials/_details.scss";
 @import "partials/_modals.scss";
+@import "partials/_popover.scss";
