--- a/darkerr.user.css
+++ b/darkerr.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Darkerr
-@version        3.0.0-beta3
+@version        3.0.0-beta4
 @namespace      https://github.com/iFelix18/
 @description    A darker theme for Sonarr, Radarr & Lidarr
 @author         Felix
@@ -18,7 +18,7 @@
     }
     .About-descriptionList-1_gea.DescriptionList-descriptionList-2MSh3 > span:nth-child(1) > .DescriptionListItemDescription-description-pR3_W:after {
       white-space: pre !important;
-      content: "\A 3.0.0-beta3" !important;
+      content: "\A 3.0.0-beta4" !important;
     }
   }
   @media (max-width: 767px) {
@@ -29,7 +29,7 @@
     }
     .About-descriptionList-1_gea.DescriptionList-descriptionList-2MSh3 > span:nth-child(2) > .DescriptionListItemTitle-title-EA460:before {
       white-space: pre !important;
-      content: "3.0.0-beta3 \A" !important;
+      content: "3.0.0-beta4 \A" !important;
       font-weight: normal !important;
     }
   }
@@ -40,7 +40,7 @@
     }
     .PageContentBody-innerContentBody-2X99r > .FieldSet-fieldSet-8lin9:nth-child(3) > .DescriptionList-descriptionList-2MSh3 > span:nth-child(1) > .DescriptionListItemDescription-description-pR3_W:after {
       white-space: pre !important;
-      content: "\A 3.0.0-beta3" !important;
+      content: "\A 3.0.0-beta4" !important;
     }
   }
   @media (max-width: 767px) {
@@ -51,7 +51,7 @@
     }
     .PageContentBody-innerContentBody-2X99r > .FieldSet-fieldSet-8lin9:nth-child(3) > .DescriptionList-descriptionList-2MSh3 > span:nth-child(2) > .DescriptionListItemTitle-title-EA460:before {
       white-space: pre !important;
-      content: "3.0.0-beta3 \A" !important;
+      content: "3.0.0-beta4 \A" !important;
       font-weight: normal !important;
     }
   }
@@ -672,6 +672,16 @@
   .ModalContent-modalContent-1B9AX .InteractiveAlbumSearchRow-title-gJxg0 .Link-to-1jNxQ:hover {
     color: #096f42 !important;
   }
+  .EnhancedSelectInput-options-rq1zN {
+    background-color: #303030 !important;
+    border-color: #303030 !important;
+  }
+  .EnhancedSelectInput-options-rq1zN .EnhancedSelectInputOption-option-24eyb:hover {
+    background-color: #232323 !important;
+  }
+  .EnhancedSelectInput-options-rq1zN .EnhancedSelectInputOption-isSelected-3Tobc {
+    background-color: #232323 !important;
+  }
   /* --- POPOVER --- */
   .Tooltip-tooltipContainer-3agNf .Tooltip-bottom-f-k_i.Tooltip-inverse-2afKH {
     border-bottom-color: #1F1F1F !important;
@@ -696,6 +706,12 @@
   }
   .Popover-popoverContainer-3ERD_ .Popover-popover-18SiF .Popover-left-2cO3y:after {
     border-left-color: #1A1A1A !important;
+  }
+  .Popover-popoverContainer-3ERD_ .Popover-popover-18SiF .Popover-right-1kWfR {
+    border-right-color: #1A1A1A !important;
+  }
+  .Popover-popoverContainer-3ERD_ .Popover-popover-18SiF .Popover-right-1kWfR:after {
+    border-right-color: #1A1A1A !important;
   }
   .Popover-popoverContainer-3ERD_ .Popover-popover-18SiF .Popover-title-2t205 {
     border-bottom-color: #303030 !important;
