--- a/sass/partials/_popover.scss
+++ b/sass/partials/_popover.scss
@@ -37,6 +37,14 @@
             }
         }
 
+        .Popover-right-1kWfR {
+            border-right-color: $DarkBG !important;
+
+            &:after {
+                border-right-color: $DarkBG !important;
+            }
+        }
+
         .Popover-title-2t205 {
             border-bottom-color: $Grey !important;
             background-color: $DarkBG !important;
