--- a/darkerr.css
+++ b/darkerr.css
@@ -1,4 +1,4 @@
-/*  Darkerr 3.0.0-beta4 by Felix
+/*  Darkerr 3.0.0-beta5 by Felix
 
         A darker theme for Sonarr, Radarr & Lidarr
 
@@ -14,7 +14,7 @@
   }
   .About-descriptionList-1_gea.DescriptionList-descriptionList-2MSh3 > span:nth-child(1) > .DescriptionListItemDescription-description-pR3_W:after {
     white-space: pre !important;
-    content: "\A 3.0.0-beta4" !important;
+    content: "\A 3.0.0-beta5" !important;
   }
 }
 
@@ -26,7 +26,7 @@
   }
   .About-descriptionList-1_gea.DescriptionList-descriptionList-2MSh3 > span:nth-child(2) > .DescriptionListItemTitle-title-EA460:before {
     white-space: pre !important;
-    content: "3.0.0-beta4 \A" !important;
+    content: "3.0.0-beta5 \A" !important;
     font-weight: normal !important;
   }
 }
@@ -38,7 +38,7 @@
   }
   .PageContentBody-innerContentBody-2X99r > .FieldSet-fieldSet-8lin9:nth-child(3) > .DescriptionList-descriptionList-2MSh3 > span:nth-child(1) > .DescriptionListItemDescription-description-pR3_W:after {
     white-space: pre !important;
-    content: "\A 3.0.0-beta4" !important;
+    content: "\A 3.0.0-beta5" !important;
   }
 }
 
@@ -50,7 +50,7 @@
   }
   .PageContentBody-innerContentBody-2X99r > .FieldSet-fieldSet-8lin9:nth-child(3) > .DescriptionList-descriptionList-2MSh3 > span:nth-child(2) > .DescriptionListItemTitle-title-EA460:before {
     white-space: pre !important;
-    content: "3.0.0-beta4 \A" !important;
+    content: "3.0.0-beta5 \A" !important;
     font-weight: normal !important;
   }
 }
@@ -437,6 +437,89 @@ body {
   -webkit-box-shadow: none !important;
           box-shadow: none !important;
   color: #FFF !important;
+}
+
+.VirtualTable-tableContainer-10vt2 .VirtualTableRow-row-2osBd .ImportSeriesSelectSeries-button-AkdHs > div > .Label-default-2zdw6,
+.VirtualTable-tableContainer-10vt2 .VirtualTableRow-row-2osBd .ImportArtistSelectArtist-button-WUML4 > div > .Label-default-2zdw6 {
+  background-color: transparent !important;
+  border-color: transparent !important;
+}
+
+.ImportSeriesSelectSeries-contentContainer-3JxMd .ImportSeriesSelectSeries-content-2AQQa {
+  background-color: #1F1F1F !important;
+}
+
+.ImportSeriesSelectSeries-contentContainer-3JxMd .ImportSeriesSelectSeries-content-2AQQa .ImportSeriesSelectSeries-searchContainer-3mJ5Q .ImportSeriesSelectSeries-searchIconContainer-WJlHu {
+  background-color: #303030 !important;
+  border-color: #1A1A1A !important;
+  color: #FFF !important;
+}
+
+.ImportSeriesSelectSeries-contentContainer-3JxMd .ImportSeriesSelectSeries-content-2AQQa .ImportSeriesSelectSeries-searchContainer-3mJ5Q .ImportSeriesSelectSeries-searchInput-2vt01 {
+  background-color: #303030 !important;
+  border-left-color: #303030 !important;
+  border-top-color: #1A1A1A !important;
+  border-right-color: #303030 !important;
+  border-bottom-color: #1A1A1A !important;
+  color: #FFF !important;
+}
+
+.ImportSeriesSelectSeries-contentContainer-3JxMd .ImportSeriesSelectSeries-content-2AQQa .ImportSeriesSelectSeries-searchContainer-3mJ5Q .ImportSeriesSelectSeries-searchInput-2vt01:focus {
+  border-left-color: #FFF !important;
+  border-top-color: #FFF !important;
+  border-right-color: #FFF !important;
+  border-bottom-color: #FFF !important;
+}
+
+.ImportSeriesSelectSeries-contentContainer-3JxMd .ImportSeriesSelectSeries-content-2AQQa .ImportSeriesSelectSeries-searchContainer-3mJ5Q .Button-default-1X0nf {
+  background-color: #303030 !important;
+  border-color: #1A1A1A !important;
+  color: #FFF !important;
+}
+
+.ImportSeriesSelectSeries-contentContainer-3JxMd .ImportSeriesSelectSeries-content-2AQQa .ImportSeriesSearchResult-series-wStU8:hover {
+  background-color: #303030 !important;
+}
+
+.ImportSeriesSelectSeries-contentContainer-3JxMd .ImportSeriesSelectSeries-content-2AQQa .ImportSeriesSearchResult-series-wStU8 .ImportSeriesTitle-titleContainer-ylYyw .Label-default-2zdw6 {
+  background-color: transparent !important;
+  border-color: transparent !important;
+}
+
+.ImportArtistSelectArtist-contentContainer-2UlsC .ImportArtistSelectArtist-content-15Mcv {
+  background-color: #1F1F1F !important;
+}
+
+.ImportArtistSelectArtist-contentContainer-2UlsC .ImportArtistSelectArtist-content-15Mcv .ImportArtistSelectArtist-searchContainer-3yQcu .ImportArtistSelectArtist-searchIconContainer-27n_z {
+  background-color: #303030 !important;
+  border-color: #1A1A1A !important;
+  color: #FFF !important;
+}
+
+.ImportArtistSelectArtist-contentContainer-2UlsC .ImportArtistSelectArtist-content-15Mcv .ImportArtistSelectArtist-searchContainer-3yQcu .ImportArtistSelectArtist-searchInput-X1Fom {
+  background-color: #303030 !important;
+  border-left-color: #303030 !important;
+  border-top-color: #1A1A1A !important;
+  border-right-color: #303030 !important;
+  border-bottom-color: #1A1A1A !important;
+  color: #FFF !important;
+}
+
+.ImportArtistSelectArtist-contentContainer-2UlsC .ImportArtistSelectArtist-content-15Mcv .ImportArtistSelectArtist-searchContainer-3yQcu .ImportArtistSelectArtist-searchInput-X1Fom:focus {
+  border-left-color: #FFF !important;
+  border-top-color: #FFF !important;
+  border-right-color: #FFF !important;
+  border-bottom-color: #FFF !important;
+}
+
+.ImportArtistSelectArtist-contentContainer-2UlsC .ImportArtistSelectArtist-content-15Mcv .ImportArtistSelectArtist-searchContainer-3yQcu .Button-default-1X0nf {
+  background-color: #303030 !important;
+  border-color: #1A1A1A !important;
+  color: #FFF !important;
+}
+
+.ImportArtistSelectArtist-contentContainer-2UlsC .ImportArtistSelectArtist-content-15Mcv .ImportArtistSearchResult-artist-IVs0T:hover {
+  background-color: #303030 !important;
 }
 
 /* --- FOOTER --- */
@@ -828,8 +911,24 @@ body {
   font-weight: normal !important;
 }
 
-.ModalContent-modalContent-1B9AX .TagInputInput-inputContainer-1SHrF .TagInput-input-2UK6_ {
+.ModalContent-modalContent-1B9AX .TagInput-inputContainer-3dApq.TagInput-isFocused-tZ4gk {
+  border-color: #FFF !important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+}
+
+.ModalContent-modalContent-1B9AX .TagInput-inputContainer-3dApq .TagInputInput-inputContainer-1SHrF .TagInput-input-2UK6_ {
   background-color: #303030 !important;
+  color: #FFF !important;
+}
+
+.ModalContent-modalContent-1B9AX .TagInput-inputContainer-3dApq .TagInput-suggestionsContainer-1vjHY {
+  background-color: #303030 !important;
+  border-color: #303030 !important;
+}
+
+.ModalContent-modalContent-1B9AX .TagInput-inputContainer-3dApq .TagInput-suggestionsContainer-1vjHY .TagInput-suggestion-3jRkQ:hover {
+  background-color: #232323 !important;
 }
 
 .ModalContent-modalContent-1B9AX .EpisodeDetailsModalContent-tab-3I6HD:hover {
@@ -845,6 +944,14 @@ body {
 
 .ModalContent-modalContent-1B9AX .InteractiveAlbumSearchRow-title-gJxg0 .Link-to-1jNxQ:hover {
   color: #096f42 !important;
+}
+
+.ModalContent-modalContent-1B9AX .CustomFilter-customFilter-1oZ5p:hover {
+  background-color: #303030 !important;
+}
+
+.ModalContent-modalContent-1B9AX .FilterBuilderRow-filterRow-MAylC:hover {
+  background-color: #1F1F1F !important;
 }
 
 .EnhancedSelectInput-options-rq1zN {
