--- a/darkerr.user.css
+++ b/darkerr.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Darkerr
-@version        3.0.0-beta5
+@version        3.0.0-beta6
 @namespace      https://github.com/iFelix18/
 @description    A darker theme for Sonarr, Radarr & Lidarr
 @author         Felix
@@ -18,7 +18,7 @@
     }
     .About-descriptionList-1_gea.DescriptionList-descriptionList-2MSh3 > span:nth-child(1) > .DescriptionListItemDescription-description-pR3_W:after {
       white-space: pre !important;
-      content: "\A 3.0.0-beta5" !important;
+      content: "\A 3.0.0-beta6" !important;
     }
   }
   @media (max-width: 767px) {
@@ -29,7 +29,7 @@
     }
     .About-descriptionList-1_gea.DescriptionList-descriptionList-2MSh3 > span:nth-child(2) > .DescriptionListItemTitle-title-EA460:before {
       white-space: pre !important;
-      content: "3.0.0-beta5 \A" !important;
+      content: "3.0.0-beta6 \A" !important;
       font-weight: normal !important;
     }
   }
@@ -40,7 +40,7 @@
     }
     .PageContentBody-innerContentBody-2X99r > .FieldSet-fieldSet-8lin9:nth-child(3) > .DescriptionList-descriptionList-2MSh3 > span:nth-child(1) > .DescriptionListItemDescription-description-pR3_W:after {
       white-space: pre !important;
-      content: "\A 3.0.0-beta5" !important;
+      content: "\A 3.0.0-beta6" !important;
     }
   }
   @media (max-width: 767px) {
@@ -51,7 +51,7 @@
     }
     .PageContentBody-innerContentBody-2X99r > .FieldSet-fieldSet-8lin9:nth-child(3) > .DescriptionList-descriptionList-2MSh3 > span:nth-child(2) > .DescriptionListItemTitle-title-EA460:before {
       white-space: pre !important;
-      content: "3.0.0-beta5 \A" !important;
+      content: "3.0.0-beta6 \A" !important;
       font-weight: normal !important;
     }
   }
@@ -759,6 +759,13 @@
   .ModalContent-modalContent-1B9AX .FilterBuilderRow-filterRow-MAylC:hover {
     background-color: #1F1F1F !important;
   }
+  .ModalContent-modalContent-1B9AX .PathInput-pathInputContainerOpen-27B9M .PathInput-pathContainer-4ZpPW {
+    background-color: #303030 !important;
+    border-color: #232323 !important;
+  }
+  .ModalContent-modalContent-1B9AX .PathInput-pathInputContainerOpen-27B9M .PathInput-pathContainer-4ZpPW .PathInput-pathListItem-2KzqS:hover {
+    background-color: #232323 !important;
+  }
   .EnhancedSelectInput-options-rq1zN {
     background-color: #303030 !important;
     border-color: #303030 !important;
@@ -803,5 +810,9 @@
   .Popover-popoverContainer-3ERD_ .Popover-popover-18SiF .Popover-title-2t205 {
     border-bottom-color: #303030 !important;
     background-color: #1A1A1A !important;
+  }
+  /* --- LOADING --- */
+  .LoadingIndicator-ripple-1264V {
+    border-color: #FFF !important;
   }
 }
