--- a/sass/darkerr.scss
+++ b/sass/darkerr.scss
@@ -1,4 +1,4 @@
-/*  Darkerr 3.0.0-beta5 by Felix
+/*  Darkerr 3.0.0-beta6 by Felix
 
         A darker theme for Sonarr, Radarr & Lidarr
 
@@ -34,3 +34,4 @@
 @import "partials/_details.scss";
 @import "partials/_modals.scss";
 @import "partials/_popover.scss";
+@import "partials/_loading.scss";
