--- a/sass/darkerr.user.scss
+++ b/sass/darkerr.user.scss
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Darkerr
-@version        3.0.0-beta5
+@version        3.0.0-beta6
 @namespace      https://github.com/iFelix18/
 @description    A darker theme for Sonarr, Radarr & Lidarr
 @author         Felix
@@ -38,4 +38,5 @@
     @import "partials/_details.scss";
     @import "partials/_modals.scss";
     @import "partials/_popover.scss";
+    @import "partials/_loading.scss";
 }
