--- a/darkerr.user.css
+++ b/darkerr.user.css
@@ -1,12 +1,12 @@
 /* ==UserStyle==
 @name           Darkerr
-@version        3.0.0-beta6
+@version        3.0.0-beta7
 @namespace      https://github.com/iFelix18/
 @description    A darker theme for Sonarr, Radarr & Lidarr
 @author         Felix
 @homepageURL    https://git.io/Darkerr
 @supportURL     https://github.com/iFelix18/Darkerr/issues
-@updateURL      https://rawgit.com/iFelix18/Darkerr/develop/darkerr.user.css
+@updateURL      https://raw.githubusercontent.com/iFelix18/Darkerr/develop/darkerr.user.css
 @license        CC-BY-SA-4.0
 ==/UserStyle== */
 @-moz-document regexp("((http(s?)):\\/\\/)?[-A-Za-z0-9+&@#/%?=~_|!:,.;]+(8989|8686)+(.*)") {
@@ -18,7 +18,7 @@
     }
     .About-descriptionList-1_gea.DescriptionList-descriptionList-2MSh3 > span:nth-child(1) > .DescriptionListItemDescription-description-pR3_W:after {
       white-space: pre !important;
-      content: "\A 3.0.0-beta6" !important;
+      content: "\A 3.0.0-beta7" !important;
     }
   }
   @media (max-width: 767px) {
@@ -29,7 +29,7 @@
     }
     .About-descriptionList-1_gea.DescriptionList-descriptionList-2MSh3 > span:nth-child(2) > .DescriptionListItemTitle-title-EA460:before {
       white-space: pre !important;
-      content: "3.0.0-beta6 \A" !important;
+      content: "3.0.0-beta7 \A" !important;
       font-weight: normal !important;
     }
   }
@@ -40,7 +40,7 @@
     }
     .PageContentBody-innerContentBody-2X99r > .FieldSet-fieldSet-8lin9:nth-child(3) > .DescriptionList-descriptionList-2MSh3 > span:nth-child(1) > .DescriptionListItemDescription-description-pR3_W:after {
       white-space: pre !important;
-      content: "\A 3.0.0-beta6" !important;
+      content: "\A 3.0.0-beta7" !important;
     }
   }
   @media (max-width: 767px) {
@@ -51,7 +51,7 @@
     }
     .PageContentBody-innerContentBody-2X99r > .FieldSet-fieldSet-8lin9:nth-child(3) > .DescriptionList-descriptionList-2MSh3 > span:nth-child(2) > .DescriptionListItemTitle-title-EA460:before {
       white-space: pre !important;
-      content: "3.0.0-beta6 \A" !important;
+      content: "3.0.0-beta7 \A" !important;
       font-weight: normal !important;
     }
   }
