--- a/jackett/sass/darkerr.scss
+++ b/jackett/sass/darkerr.scss
@@ -1,4 +1,4 @@
-/*  Darkerr for Jackett 1.0.0-beta2 by Felix
+/*  Darkerr for Jackett 1.0.0-beta3 by Felix
 
         A darker theme for Jackett
 
@@ -12,4 +12,5 @@
 @import "partials/_logo.scss";
 @import "partials/_texts.scss";
 @import "partials/_table.scss";
-@import "partials/_forms.scss";
+@import "partials/_input.scss";
+@import "partials/_modals.scss";
